<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232D42"
    tools:context=".IndivNoteActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sketch_gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sketch_gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <TextView
        android:id="@+id/sketch_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle_topbar"
        android:fontFamily="@font/roboto_slab"
        android:padding="10sp"
        android:text="@string/title_placeholder"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/sketch_gl_end"
        app:layout_constraintStart_toStartOf="@+id/sketch_gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sketch_tv_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle_topbar"
        android:fontFamily="@font/roboto_slab"
        android:padding="5sp"
        android:text="@string/tag_placeholder"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/sketch_gl_end"
        app:layout_constraintStart_toStartOf="@+id/sketch_gl_start"
        app:layout_constraintTop_toBottomOf="@+id/sketch_tv_title" />

    <com.mobdeve.s14.group20.mobdeveproject.CanvasView
        android:id="@+id/sketch_canvas_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sketch_gl_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sketch_gl_start"
        app:layout_constraintTop_toBottomOf="@+id/sketch_tv_tags"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sketch_clear_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/sketch_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sketch_gl_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sketch_save_button"
        app:layout_constraintTop_toBottomOf="@+id/sketch_canvas_view" />

    <Button
        android:id="@+id/sketch_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/sketch_save"
        app:layout_constraintEnd_toStartOf="@+id/sketch_clear_screen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sketch_canvas_view" />

</androidx.constraintlayout.widget.ConstraintLayout>